- fixed x-scroll on mobile - removed social links for now.

--- a/css/main.css
+++ b/css/main.css
@@ -2295,8 +2295,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .banner-area {
-  /* background: url(../img/background.png) center; */
-  background-image: -webkit-linear-gradient(0deg, #235ee7 0%, #4ae7fa 100%);
+  background: url(../img/background.png) center;
+  /* background-image: -webkit-linear-gradient(0deg, #235ee7 0%, #4ae7fa 100%); */
   background-size: cover;
 }
 
@@ -2635,6 +2635,11 @@ body.mobile-nav-active #mobile-nav-toggle {
   border-radius: 0 !important;
   color: #fff;
   text-decoration: none;
+}
+
+.faq-left .btn {
+  white-space: normal;
+  text-align: left;
 }
 
 @media (max-width: 414px) {
